--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "coffee-script": "~1.8.0",
     "jade": "~1.8.1",
     "sails-mongo": "~0.10.4",
-    "stylus": "~0.49.3"
+    "stylus": "~0.49.3",
+    "backbone": "~1.1.2"
   },
   "scripts": {
     "start": "node app.js",
